package business.facade;

public class EvaluationFacade {
    public void rate(int offerId, int rate){}
    public void comment(int offerId, String comment){}
    public void deleteComment(int commentId){}
    public void deleteRate(int idRate){}
    public void updateComment(int commentId, int idRate, int userID){}
}
