package business.system;

public class ScoreOffer {
}
