package gui.controller;

import com.jfoenix.controls.JFXTextArea;
import org.controlsfx.control.Rating;

import java.awt.event.ActionEvent;

public class EvaluationController {
    private JFXTextArea commentArea;
    private Rating rateArea;

    public void handleRate(ActionEvent actionEvent){}
    public void handleComment(ActionEvent actionEvent){}
}
